import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'.button { color: red; } .button:hover { color: blue; }',
		'.button { color: red !important; } .button:hover { color: blue !important; }',
		'.button { color: red; } .button:hover { color: blue !important; }',
		'.button { color: red !important; } .button:hover { background: blue; }',
		'.button { color: red !important; } .link:hover { color: blue; }',
		'.button:hover { color: red !important; } .button:focus { color: blue; }',
		'.button:disabled { color: red !important; } .button:enabled { color: blue; }',
		'.button { color: red !important; } .button .icon:hover { color: blue; }',
		'.button { color: red !important; } .button::before { color: blue; }',
		'.button { color: red !important; } .button:before { color: blue; }',
		'.button { color: red !important; } .button { color: blue; }',
		'.button { color: red !important; color: blue; }',
		'.button { color: red !important; } .button:hover, .link:hover { color: blue; }',
		'.button, .link:unknown { color: red !important; } .button:hover { color: blue; }',
		'.button { color: red !important; } .button:hover, .link:unknown { color: blue; }',
		'.button { color: red !important; } .button { :hover { color: blue; } }',
		'.button { color: red !important; } .button { & .icon { color: blue; } }',
		'.button, .link { color: red !important; &:hover { color: blue; } }',
		'.button { color: red !important; :is(&:hover) { color: blue; } }',
		'.button { color: red !important; } .button { .theme & { color: blue; } }',
		'.Button { color: red !important; } .button:hover { color: blue; }',
		'.button { --Color: red !important; } .button:hover { --color: blue; }',
		'.button { margin: 0 !important; } .button:hover { margin-top: 1px; }',
		'.button { all: initial !important; } .button:hover { color: blue; }',
		'.button { color: not-a-color !important; } .button:hover { color: blue; }',
		'.button { color: var(--color) !important; } .button:hover { color: blue; }',
		'.button { --color: var(--base) !important; } .button:hover { --color: blue; }',
		'.button { color: red !important; color: revert !important; } .button:hover { color: blue; }',
		'.button { color: red !important; } .button:hover { color: revert-layer !important; color: blue; }',
		'.button { --color: revert-layer !important; } .button:hover { --color: blue; }',
		'@media print { .button { color: red !important; } } .button:hover { color: blue; }',
		'@media print { .button { color: red !important; } } @media screen { .button:hover { color: blue; } }',
		'@supports (display: grid) { .button { color: red !important; } } @supports (display: flex) { .button:hover { color: blue; } }',
		'@container narrow (width < 20rem) { .button { color: red !important; } } @container wide (width > 40rem) { .button:hover { color: blue; } }',
		'@scope (.page) { .button { color: red !important; } .button:hover { color: blue; } }',
		'@starting-style { .button { color: red !important; } } .button:hover { color: blue; }',
		'@unknown { .button { color: red !important; } .button:hover { color: blue; } }',
		'@keyframes fade { from { color: red !important; } to { color: blue; } }',
		'@-webkit-keyframes fade { from { color: red !important; } to { color: blue; } }',
		'@layer base { .button { color: red; } } .button:hover { color: blue; }',
		'.button { color: red !important; } @layer state { .button:hover { color: blue !important; } }',
		'@layer base { .button { color: red; } } @layer state { .button:hover { color: blue; } }',
		'@layer { .button { color: red !important; } } @layer { .button:hover { color: blue !important; } }',
		'.button { color: red; } @media (width > 40rem) { .button { color: blue; } }',
		'.button { content: ":hover !important"; } .button:hover { content: "blue"; }',
		'.button { background-image: url("important:hover"); } .button:hover { background-image: none; }',
		'.button { color: red !important; } .button:unknown { color: blue; }',
		'.button { color: red !important; } .button:host { color: blue; }',
		'.button { color: red !important; } .button:scope { color: blue; }',
		'.button:hover { color: red !important; } .button:hover:focus { color: blue; }',
		String.raw`@namespace foo "urn:foo"; foo\|bar { color: red !important; } foo|bar:hover { color: blue; }`,
		String.raw`\2a { color: red !important; } *:hover { color: blue; }`,
		'.button { color: red !important; all: revert-layer !important; } .button:hover { color: blue; }',
		'.toolbar > .button { color: red !important; } .toolbar { .button:hover { color: blue; } }',
	],
	invalid: [
		'.button { color: red !important; }\n.button:hover { color: blue; }',
		'.button:hover { color: blue; } .button { color: red !important; }',
		'.button { color: red !important; } .button:disabled { color: blue; }',
		'.button { color: red !important; } .button:focus-visible { color: blue; }',
		'.button { color: red !important; } .button:not(:disabled):hover { color: blue; }',
		'.button { color: red !important; } .button:has(.icon) { color: blue; }',
		'.button { color: red !important; } .button:is(:hover, :focus) { color: blue; }',
		'.button { COLOR: red !important; } .button:HOVER { color: blue; }',
		String.raw`.button { \63 olor: red !important; } .button:\68 over { color: blue; }`,
		String.raw`.\62 utton { color: red !important; } .button:hover { color: blue; }`,
		String.raw`#\62 utton { color: red !important; } #button:hover { color: blue; }`,
		String.raw`\61 { color: red !important; } a:hover { color: blue; }`,
		'.button { --color: red !important; } .button:hover { --color: blue; }',
		'.button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; }',
		'.button { color: red !important; } .button:hover { color: var(--color); }',
		'.button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; }',
		'.button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }',
		'.button, .link { color: red !important; } .button:hover, .link:focus { color: blue; }',
		'.button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; }',
		'.toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; }',
		'.button { color: red !important; &:hover { color: blue; } }',
		'.button { &:hover { color: blue; } color: red !important; }',
		'.button { color: red !important; @media (width > 40rem) { color: blue; } }',
		'.button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } }',
		'.toolbar { .button { color: red !important; &:hover { color: blue; } } }',
		'.button { color: red !important; } @media (width > 40rem) { .button { color: blue; } }',
		'@media (width > 40rem) { .button { color: blue; } } .button { color: red !important; }',
		'@media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } }',
		'@media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } }',
		'.button { color: red !important; } @container (width > 40rem) { .button { color: blue; } }',
		'.button { color: red !important; } @supports (display: grid) { .button { color: blue; } }',
		'.button { color: red; } @layer state { .button:hover { color: blue; } }',
		'@layer state { .button:hover { color: blue; } } .button { color: red; }',
		'.button { color: red; } @layer state { .button { color: blue; } }',
		'.button { color: red; @layer state { &:hover { color: blue; } } }',
		'@layer base { .button { color: red !important; } } .button:hover { color: blue !important; }',
		'@layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } }',
		'@layer { .button { color: red !important; } .button:hover { color: blue; } }',
		'.button { color: inherit !important; } .button:hover { color: blue; }',
		'.button { color: initial !important; } .button:hover { color: blue; }',
		'.button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; }',
		'.button { color: red !important; }\r\n.button:hover { color: blue; }',
		'.toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } }',
		'.toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; }',
		'.toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } }',
		'.toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } }',
		'.button { --color: "var(--base)" !important; } .button:hover { --color: blue; }',
		String.raw`.button { --\63 olor: red !important; } .button:hover { --color: blue; }`,
	],
});
