exports[`invalid(1): .button { color: red !important; }\n.button:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; }
  2 | .button:hover { color: blue; }

`;

exports[`invalid(1): .button { color: red !important; }\n.button:hover { color: blue; } 2`] = `

Message:
  1 | .button { color: red !important; }
> 2 | .button:hover { color: blue; }
    |                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(10): .\\62 utton { color: red !important; } .button:hover { color: blue; } 1`] = `

  1 | .\\62 utton { color: red !important; } .button:hover { color: blue; }

`;

exports[`invalid(10): .\\62 utton { color: red !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .\\62 utton { color: red !important; } .button:hover { color: blue; }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): #\\62 utton { color: red !important; } #button:hover { color: blue; } 1`] = `

  1 | #\\62 utton { color: red !important; } #button:hover { color: blue; }

`;

exports[`invalid(11): #\\62 utton { color: red !important; } #button:hover { color: blue; } 2`] = `

Message:
> 1 | #\\62 utton { color: red !important; } #button:hover { color: blue; }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(12): \\61 { color: red !important; } a:hover { color: blue; } 1`] = `

  1 | \\61 { color: red !important; } a:hover { color: blue; }

`;

exports[`invalid(12): \\61 { color: red !important; } a:hover { color: blue; } 2`] = `

Message:
> 1 | \\61 { color: red !important; } a:hover { color: blue; }
    |                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(13): .button { --color: red !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --color: red !important; } .button:hover { --color: blue; }

`;

exports[`invalid(13): .button { --color: red !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --color: red !important; } .button:hover { --color: blue; }
    |                                                      ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(14): .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; } 1`] = `

  1 | .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; }

`;

exports[`invalid(14): .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; } 2`] = `

Message:
> 1 | .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; }
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^ \`-WEBKIT-APPEARANCE\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(15): .button { color: red !important; } .button:hover { color: var(--color); } 1`] = `

  1 | .button { color: red !important; } .button:hover { color: var(--color); }

`;

exports[`invalid(15): .button { color: red !important; } .button:hover { color: var(--color); } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:hover { color: var(--color); }
    |                                                    ^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(16): .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; } 1`] = `

  1 | .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; }

`;

exports[`invalid(16): .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; } 2`] = `

Message:
> 1 | .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; }
    |                                                                           ^^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(17): .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; } 1`] = `

  1 | .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }

`;

exports[`invalid(17): .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; } 2`] = `

Message:
> 1 | .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }
    |                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(17): .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; } 3`] = `

Message:
> 1 | .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }
    |                                                                                               ^^^^^^^^^^^^^^^^^ \`background\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(18): .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; } 1`] = `

  1 | .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; }

`;

exports[`invalid(18): .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; } 2`] = `

Message:
> 1 | .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; }
    |                                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(19): .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; } 1`] = `

  1 | .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; }

`;

exports[`invalid(19): .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; }
    |                                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .button:hover { color: blue; } .button { color: red !important; } 1`] = `

  1 | .button:hover { color: blue; } .button { color: red !important; }

`;

exports[`invalid(2): .button:hover { color: blue; } .button { color: red !important; } 2`] = `

Message:
> 1 | .button:hover { color: blue; } .button { color: red !important; }
    |                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(20): .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; } 1`] = `

  1 | .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; }

`;

exports[`invalid(20): .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; }
    |                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(21): .button { color: red !important; &:hover { color: blue; } } 1`] = `

  1 | .button { color: red !important; &:hover { color: blue; } }

`;

exports[`invalid(21): .button { color: red !important; &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; &:hover { color: blue; } }
    |                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(22): .button { &:hover { color: blue; } color: red !important; } 1`] = `

  1 | .button { &:hover { color: blue; } color: red !important; }

`;

exports[`invalid(22): .button { &:hover { color: blue; } color: red !important; } 2`] = `

Message:
> 1 | .button { &:hover { color: blue; } color: red !important; }
    |                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(23): .button { color: red !important; @media (width > 40rem) { color: blue; } } 1`] = `

  1 | .button { color: red !important; @media (width > 40rem) { color: blue; } }

`;

exports[`invalid(23): .button { color: red !important; @media (width > 40rem) { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; @media (width > 40rem) { color: blue; } }
    |                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(24): .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } } 1`] = `

  1 | .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } }

`;

exports[`invalid(24): .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } }
    |                                                                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(25): .toolbar { .button { color: red !important; &:hover { color: blue; } } } 1`] = `

  1 | .toolbar { .button { color: red !important; &:hover { color: blue; } } }

`;

exports[`invalid(25): .toolbar { .button { color: red !important; &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .toolbar { .button { color: red !important; &:hover { color: blue; } } }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(26): .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } } 1`] = `

  1 | .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } }

`;

exports[`invalid(26): .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } }
    |                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(27): @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; } 1`] = `

  1 | @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; }

`;

exports[`invalid(27): @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; } 2`] = `

Message:
> 1 | @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; }
    |                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(28): @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } } 1`] = `

  1 | @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } }

`;

exports[`invalid(28): @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } }
    |                                                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(29): @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } } 1`] = `

  1 | @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } }

`;

exports[`invalid(29): @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } } 2`] = `

Message:
> 1 | @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } }
    |                                                                                         ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button { color: red !important; } .button:disabled { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:disabled { color: blue; }

`;

exports[`invalid(3): .button { color: red !important; } .button:disabled { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:disabled { color: blue; }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(30): .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } } 1`] = `

  1 | .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } }

`;

exports[`invalid(30): .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } }
    |                                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(31): .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } 1`] = `

  1 | .button { color: red !important; } @supports (display: grid) { .button { color: blue; } }

`;

exports[`invalid(31): .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } @supports (display: grid) { .button { color: blue; } }
    |                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(32): .button { color: red; } @layer state { .button:hover { color: blue; } } 1`] = `

  1 | .button { color: red; } @layer state { .button:hover { color: blue; } }

`;

exports[`invalid(32): .button { color: red; } @layer state { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red; } @layer state { .button:hover { color: blue; } }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(33): @layer state { .button:hover { color: blue; } } .button { color: red; } 1`] = `

  1 | @layer state { .button:hover { color: blue; } } .button { color: red; }

`;

exports[`invalid(33): @layer state { .button:hover { color: blue; } } .button { color: red; } 2`] = `

Message:
> 1 | @layer state { .button:hover { color: blue; } } .button { color: red; }
    |                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(34): .button { color: red; } @layer state { .button { color: blue; } } 1`] = `

  1 | .button { color: red; } @layer state { .button { color: blue; } }

`;

exports[`invalid(34): .button { color: red; } @layer state { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red; } @layer state { .button { color: blue; } }
    |                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(35): .button { color: red; @layer state { &:hover { color: blue; } } } 1`] = `

  1 | .button { color: red; @layer state { &:hover { color: blue; } } }

`;

exports[`invalid(35): .button { color: red; @layer state { &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .button { color: red; @layer state { &:hover { color: blue; } } }
    |                                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(36): @layer base { .button { color: red !important; } } .button:hover { color: blue !important; } 1`] = `

  1 | @layer base { .button { color: red !important; } } .button:hover { color: blue !important; }

`;

exports[`invalid(36): @layer base { .button { color: red !important; } } .button:hover { color: blue !important; } 2`] = `

Message:
> 1 | @layer base { .button { color: red !important; } } .button:hover { color: blue !important; }
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(37): @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } } 1`] = `

  1 | @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } }

`;

exports[`invalid(37): @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } }
    |                                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(38): @layer { .button { color: red !important; } .button:hover { color: blue; } } 1`] = `

  1 | @layer { .button { color: red !important; } .button:hover { color: blue; } }

`;

exports[`invalid(38): @layer { .button { color: red !important; } .button:hover { color: blue; } } 2`] = `

Message:
> 1 | @layer { .button { color: red !important; } .button:hover { color: blue; } }
    |                                                             ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(39): .button { color: inherit !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { color: inherit !important; } .button:hover { color: blue; }

`;

exports[`invalid(39): .button { color: inherit !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: inherit !important; } .button:hover { color: blue; }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button { color: red !important; } .button:focus-visible { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:focus-visible { color: blue; }

`;

exports[`invalid(4): .button { color: red !important; } .button:focus-visible { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:focus-visible { color: blue; }
    |                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(40): .button { color: initial !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { color: initial !important; } .button:hover { color: blue; }

`;

exports[`invalid(40): .button { color: initial !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: initial !important; } .button:hover { color: blue; }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(41): .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; } 1`] = `

  1 | .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; }

`;

exports[`invalid(41): .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; } 2`] = `

Message:
> 1 | .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; }
    |                                                                  ^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(42): .button { color: red !important; }\r\n.button:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; }
  2 | .button:hover { color: blue; }

`;

exports[`invalid(42): .button { color: red !important; }\r\n.button:hover { color: blue; } 2`] = `

Message:
  1 | .button { color: red !important; }
> 2 | .button:hover { color: blue; }
    |                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(43): .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } } 1`] = `

  1 | .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } }

`;

exports[`invalid(43): .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(44): .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; } 1`] = `

  1 | .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; }

`;

exports[`invalid(44): .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; }
    |                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(45): .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } } 1`] = `

  1 | .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } }

`;

exports[`invalid(45): .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(46): .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } } 1`] = `

  1 | .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } }

`;

exports[`invalid(46): .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(47): .button { --color: \"var(--base)\" !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --color: "var(--base)" !important; } .button:hover { --color: blue; }

`;

exports[`invalid(47): .button { --color: \"var(--base)\" !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --color: "var(--base)" !important; } .button:hover { --color: blue; }
    |                                                                ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(48): .button { --\\63 olor: red !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --\\63 olor: red !important; } .button:hover { --color: blue; }

`;

exports[`invalid(48): .button { --\\63 olor: red !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --\\63 olor: red !important; } .button:hover { --color: blue; }
    |                                                         ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .button { color: red !important; } .button:not(:disabled):hover { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:not(:disabled):hover { color: blue; }

`;

exports[`invalid(5): .button { color: red !important; } .button:not(:disabled):hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:not(:disabled):hover { color: blue; }
    |                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .button { color: red !important; } .button:has(.icon) { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:has(.icon) { color: blue; }

`;

exports[`invalid(6): .button { color: red !important; } .button:has(.icon) { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:has(.icon) { color: blue; }
    |                                                         ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): .button { color: red !important; } .button:is(:hover, :focus) { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:is(:hover, :focus) { color: blue; }

`;

exports[`invalid(7): .button { color: red !important; } .button:is(:hover, :focus) { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:is(:hover, :focus) { color: blue; }
    |                                                                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button { COLOR: red !important; } .button:HOVER { color: blue; } 1`] = `

  1 | .button { COLOR: red !important; } .button:HOVER { color: blue; }

`;

exports[`invalid(8): .button { COLOR: red !important; } .button:HOVER { color: blue; } 2`] = `

Message:
> 1 | .button { COLOR: red !important; } .button:HOVER { color: blue; }
    |                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(9): .button { \\63 olor: red !important; } .button:\\68 over { color: blue; } 1`] = `

  1 | .button { \\63 olor: red !important; } .button:\\68 over { color: blue; }

`;

exports[`invalid(9): .button { \\63 olor: red !important; } .button:\\68 over { color: blue; } 2`] = `

Message:
> 1 | .button { \\63 olor: red !important; } .button:\\68 over { color: blue; }
    |                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;
